Bug 20786 - description elements in tooltips are illegible in Purplerain theme. r=stevel
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@18258 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/feathers/purplerain/chrome/skin/feathers.css
+++ b/feathers/purplerain/chrome/skin/feathers.css
@@ -163,7 +163,8 @@ label {
 label.button-text {
   font-size: 10px;
 }
-tooltip > label {
+tooltip description,
+tooltip label {
   color: rgb(40,40,40);
 }
 treechildren::-moz-tree-cell-text {
